@@ -2,7 +2,7 @@
  <author>rncbc aka Rui Nuno Capela</author>
  <comment>qxgedit - Qt XG Editor.
 
-   Copyright (C) 2005-2013, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2005-2015, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -26,7 +26,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>720</height>
+    <height>520</height>
    </rect>
   </property>
   <property name="minimumSize" >
@@ -53,17 +53,17 @@
       </property>
       <widget class="QWidget" name="SystemEffectTab" >
        <attribute name="title" >
-        <string>SYSTEM / EFFECT</string>
+        <string>System / Effect</string>
        </attribute>
        <layout class="QVBoxLayout" >
         <item>
-         <widget class="QToolBox" name="SystemEffectToolBox" >
+         <widget class="QTabWidget" name="SystemEffectToolBox" >
           <property name="currentIndex" >
            <number>0</number>
           </property>
           <widget class="QWidget" name="SYSTEMPage" >
-           <attribute name="label" >
-            <string>MASTER</string>
+           <attribute name="title" >
+            <string>Master</string>
            </attribute>
            <layout class="QGridLayout" >
             <item row="0" column="0" >
@@ -117,8 +117,8 @@
            </layout>
           </widget>
           <widget class="QWidget" name="ReverbPage" >
-           <attribute name="label" >
-            <string>REVERB</string>
+           <attribute name="title" >
+            <string>Reverb</string>
            </attribute>
            <layout class="QGridLayout" >
             <item row="0" column="0" >
@@ -230,8 +230,8 @@
            </layout>
           </widget>
           <widget class="QWidget" name="ChorusPage" >
-           <attribute name="label" >
-            <string>CHORUS</string>
+           <attribute name="title" >
+            <string>Chorus</string>
            </attribute>
            <layout class="QGridLayout" >
             <item row="0" column="0" >
@@ -346,8 +346,8 @@
            </layout>
           </widget>
           <widget class="QWidget" name="VariationPage" >
-           <attribute name="label" >
-            <string>VARIATION</string>
+           <attribute name="title" >
+            <string>Variation</string>
            </attribute>
            <layout class="QGridLayout" >
             <item row="0" column="0" >
@@ -491,7 +491,7 @@
       </widget>
       <widget class="QWidget" name="MultipartTab" >
        <attribute name="title" >
-        <string>MULTI PART</string>
+        <string>Multi Part</string>
        </attribute>
        <layout class="QVBoxLayout" >
         <item>
@@ -528,12 +528,12 @@
          </layout>
         </item>
         <item>
-         <widget class="QToolBox" name="MultipartToolBox" >
+         <widget class="QTabWidget" name="MultipartToolBox" >
           <property name="currentIndex" >
            <number>0</number>
           </property>
           <widget class="QWidget" name="MultipartMainPage" >
-           <attribute name="label" >
+           <attribute name="title" >
             <string>Main</string>
            </attribute>
            <layout class="QGridLayout" >
@@ -697,7 +697,7 @@
            </layout>
           </widget>
           <widget class="QWidget" name="MultipartTonePage" >
-           <attribute name="label" >
+           <attribute name="title" >
             <string>Tone</string>
            </attribute>
            <layout class="QGridLayout" >
@@ -853,7 +853,7 @@
            </layout>
           </widget>
           <widget class="QWidget" name="MultipartControlPage" >
-           <attribute name="label" >
+           <attribute name="title" >
             <string>Control</string>
            </attribute>
            <layout class="QGridLayout" >
@@ -1026,7 +1026,7 @@
            </layout>
           </widget>
           <widget class="QWidget" name="MultipartOptionsPage" >
-           <attribute name="label" >
+           <attribute name="title" >
             <string>Options</string>
            </attribute>
            <layout class="QGridLayout" >
@@ -1171,7 +1171,7 @@
       </widget>
       <widget class="QWidget" name="DrumsetupTab" >
        <attribute name="title" >
-        <string>DRUM SETUP</string>
+        <string>Drum Setup</string>
        </attribute>
        <layout class="QVBoxLayout" >
         <item>
@@ -1361,7 +1361,7 @@
       </widget>
       <widget class="QWidget" name="UservoiceTab" >
        <attribute name="title" >
-        <string>USER VOICE</string>
+        <string>User Voice</string>
        </attribute>
        <layout class="QVBoxLayout" >
         <item>
@@ -1421,12 +1421,12 @@
          </layout>
         </item>
         <item>
-         <widget class="QToolBox" name="UservoiceToolBox" >
+         <widget class="QTabWidget" name="UservoiceToolBox" >
           <property name="currentIndex" >
            <number>0</number>
           </property>
           <widget class="QWidget" name="UservoiceMainPage" >
-           <attribute name="label" >
+           <attribute name="title" >
             <string>Main</string>
            </attribute>
            <layout class="QGridLayout" >
@@ -1521,7 +1521,7 @@
            </layout>
           </widget>
           <widget class="QWidget" name="UservoiceLevelPage" >
-           <attribute name="label" >
+           <attribute name="title" >
             <string>Level</string>
            </attribute>
            <layout class="QGridLayout" >
@@ -1608,7 +1608,7 @@
            </layout>
           </widget>
           <widget class="QWidget" name="UservoiceCutoffPage" >
-           <attribute name="label" >
+           <attribute name="title" >
             <string>Cutoff</string>
            </attribute>
            <layout class="QGridLayout" >
@@ -1708,7 +1708,7 @@
            </layout>
           </widget>
           <widget class="QWidget" name="UservoiceFilterEgPage" >
-           <attribute name="label" >
+           <attribute name="title" >
             <string>Filter EG</string>
            </attribute>
            <layout class="QGridLayout" >
@@ -1804,7 +1804,7 @@
            </layout>
           </widget>
           <widget class="QWidget" name="UservoicePitchEgPage" >
-           <attribute name="label" >
+           <attribute name="title" >
             <string>Pitch EG</string>
            </attribute>
            <layout class="QGridLayout" >
@@ -1912,7 +1912,7 @@
            </layout>
           </widget>
           <widget class="QWidget" name="UservoiceAmpEgPage" >
-           <attribute name="label" >
+           <attribute name="title" >
             <string>Amp EG</string>
            </attribute>
            <layout class="QGridLayout" >
@@ -2297,7 +2297,7 @@
    </property>
   </action>
  </widget>
- <layoutdefault spacing="4" margin="8" />
+ <layoutdefault spacing="4" margin="4" />
  <customwidgets>
   <customwidget>
    <class>qxgeditDial</class>
