@@ -3,8 +3,10 @@ QXGEdit - Qt XG Editor
 
 GIT HEAD
 
+- In a glance, all GUI toolbox pages converted into tabs.
+
 - Introducing a brand new user preference on eye-candy: cf.
-  View/Options.../Display/Custom style theme.
+  View/Options.../Display/Widget style theme.
 
 - Most graphics now rendered with anti-aliased lines.
 
